--- a/src/app/site/components/main/main.component.html
+++ b/src/app/site/components/main/main.component.html
@@ -1,19 +1,3 @@
-<mat-toolbar color="accent">
-
-  <mat-toolbar-row class="mat-elevation-z6 site-toolbar-top bg-secondary-bc" style="height: 30px !important;">
-    <span>Bem vindos</span>
-    <span class="site-spacer"></span>
-    <span>Login
-      <a routerLink=".">
-        <button mat-icon-button color="primary">
-          <mat-icon aria-label="Example icon-button with a heart icon">input</mat-icon>
-       </button>
-      </a>
-    </span>
-  </mat-toolbar-row>
-
-</mat-toolbar>
-
 <nav id="navbar-menu" class="navbar navbar-expand-lg fixed-top navbar-light  bg-primary-bc">
   <a class="navbar-brand" href="#">
     <div class="imglogo"></div>
@@ -42,7 +26,7 @@
 </nav>
 
 
-<div class="nav-scroll" data-spy="scroll" data-target="#navbar-menu" data-offset="0">
+<div class="scroll-container">
   <section id="site">
     <span>Site</span>
   </section>
