--- a/src/app/site/components/main/main.component.scss
+++ b/src/app/site/components/main/main.component.scss
@@ -100,7 +100,46 @@ $navbar-light-color:                rgba($secondary-bc, 1) !default;
 $border-radius:                     .25rem !default;
 $nav-pills-border-radius:           $border-radius !default;
 $nav-pills-link-active-color:       rgba($dark,.3) !default;
-$nav-pills-link-active-bg:          rgba($secondary-bc,.4) !default;
+$nav-pills-link-active-bg:          rgba($secondary-bc,.0) !default;
+
+
+//
+// Pills
+//
+
+.nav-pills {
+  .nav-link {
+    border-radius:0;
+  }
+
+  .nav-link.active,
+  .show > .nav-link {
+    border-radius:0;
+    border-bottom: #AA3256 solid 3px;
+  }
+}
+
+
+//
+// Justified variants
+//
+
+.nav-fill {
+  .nav-item {
+    flex: 1 1 auto;
+    text-align: center;
+  }
+}
+
+.nav-justified {
+  .nav-item {
+    flex-basis: 0;
+    flex-grow: 1;
+    text-align: center;
+  }
+}
+
+
 
 @media (max-width: 575.98px) {
 
@@ -391,18 +430,15 @@ $nav-pills-link-active-bg:          rgba($secondary-bc,.4) !default;
 }
 
 #navbar-menu {
-  position: relative;
+  position: fixed;
   padding-bottom: 0;
-  padding-top: 15px;
 }
 
-
-.site-toolbar-top {
-  height: 30px !important;
-  font-weight: lighter;
-  font-size: .8em;
-  padding: 10px;
-  margin-top: 0 !important;
+.scroll-container {
+  position: static;
+  left: 0;
+  top: 205px;
+  height: auto;
 }
 
 .mat-toolbar-row, .mat-toolbar-single-row {
@@ -516,7 +552,7 @@ a.dev-for {
 
 
 div section{
-  min-height: 300px;
+  min-height: 200vm;
   display: flex;
   align-items: center;
 }
