--- a/src/app/site/components/main/main.component.html
+++ b/src/app/site/components/main/main.component.html
@@ -1,29 +1,31 @@
-<nav id="navbar-menu" class="navbar navbar-expand-lg fixed-top navbar-light  bg-primary-bc">
-  <a class="navbar-brand" href="#">
-    <div class="imglogo"></div>
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<div class="container-fluid">
+  <nav id="navbar-menu" class="navbar navbar-expand-lg fixed-top navbar-light  bg-primary-bc">
+    <a class="navbar-brand" href="#">
+      <div class="imglogo"></div>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="nav navbar-nav nav-pills mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#site">Site<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#products">Produtos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#about">Sobre nós</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#contact">Contato</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="nav navbar-nav nav-pills mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#site">Site<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#products">Produtos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">Sobre nós</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contato</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
 
 
 <div class="scroll-container">
